...
      }}
    >
      <ActivityStack.Screen
        name="ActivitiesMain"
        component={ActivityScreen}
        options={{
          title: 'Activities',
          headerShown: false,
        }}
      />
      <ActivityStack.Screen
        name="ActivityPostScreen"
        component={ActivityPostScreen}
        options={{
          title: 'Post Activity',
        }}
      />
    </ActivityStack.Navigator>
  );
};

...
